<resources>
    <string name="app_name">Batman</string>
    <string name="button_next">Seguinte</string>
    <string name="button_iniciar">Iniciar</string>
    <string name="button_recomeçar">Recomeçar</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="bat_symbol">O símbolo do morcego</string>
    <string name="symbol_desc">O morcego é uma criatura que sempre provocou medo em Bruce Wayne. Sendo assim, ele resolveu compartilhar este medo com os criminosos de Gotham City.</string>
    <string name="descricao">Comece sua jornada clicando em INICIAR, ou selecione uma seção em nosso menu.</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_desc">O aplicativo foi desenvolvido para cumprir os requisitos da disciplina de Programação Web-Mobile da UNICAP, ministrada pelo professor Márcio Bueno. As informações utilizadas correspondem à trilogia do batman dirigida por Christopher Nolan e o papel do justiceiro é interpretado por Christian Bale.</string>
    <string name="bruce_wayne">Bruce Wayne</string>
    <string name="batman_title">Batman</string>
    <string name="batman_desc">Sem possuir poderes especiais, utiliza sua fortuna para criar tecnologias inovadoras e estar sempre um passo à frente dos intitulados vilões e corruptos, afinal de contas, o Batman sempre tem um plano.</string>
    <string name="inicio">Início</string>
    <string name="viloes">Vilões</string>
    <string name="bruce_bio">Bilionario industrial e playboy notório. É um dos homens mais inteligentes do mundo, mora em Gotham City e assume a identidade do justiceiro mascarado para proteger a cidade.</string>
    <string name="viloes_desc">Escolha um vilão.</string>
    <string name="harvey">Harvey Dent</string>
    <string name="two_face">Duas Caras</string>
    <string name="harvey_desc">Harvey Dent, o cavaleiro branco de Gotham, que liderava a promotoria caçando todo tipo de criminoso, não morreu como herói e acabou vivendo tempo suficiente para se tornar um vilão.</string>
    <string name="joker">Coringa</string>
    <string name="joker_desc">Um gênio do crime. Psicopata com um humor sádico e doentio. O coringa é o tipo do personagem imprevisível que faz de tudo para gerar o caos. Ele quer apenas ver o mundo pegar fogo.</string>
    <string name="ras_al_ghul">Ra\'s Al Ghul</string>
    <string name="ras_desc">Líder da liga das sombras. Treinou Bruce Wayne quando ele estava perdido no mundo e na vida, deu-lhe um novo propósito. No entanto, seus métodos crueis são incompatíveis com o herói.</string>
    <string name="bane">Bane</string>
    <string name="bane_desc">Conhecido por sua força bruta e inteligência excepcional, nasceu na prisão de Pietra Dura e viveu uma vida difícil, cheia de crimes, se tornando o musculoso vilão que atormenta Gotham. Também é referido como o único vilão que \"quebrou o morcego\".</string>
    <string name="filmes">Filmes</string>
    <string name="filmes_desc">Escolha um filme para obter a sinopse.</string>
    <string name="begins">Batman Begins</string>
    <string name="begins_desc">Marcado pelo assassinato de seus pais quando ainda era criança, o milionário Bruce Wayne (Christian Bale) decide viajar pelo mundo em busca de encontrar meios que lhe permitam combater a injustiça e provocar medo em seus adversários. Após retornar a Gotham City, sua cidade-natal, ele idealiza seu alter-ego: Batman, um justiceiro mascarado que usa força, inteligência e um arsenal tecnológico para combater o crime.</string>
    <string name="knight">The Dark Knight</string>
    <string name="knight_desc">Após dois anos desde o surgimento do Batman (Christian Bale), os criminosos de Gotham City têm muito o que temer. Com a ajuda do tenente James Gordon (Gary Oldman) e do promotor público Harvey Dent (Aaron Eckhart), Batman luta contra o crime organizado. Acuados com o combate, os chefes do crime aceitam a proposta feita pelo Coringa (Heath Ledger) e o contratam para combater o Homem-Morcego.</string>
    <string name="rises">The Dark Knight Rises</string>
    <string name="rises_desc">Oito anos após a morte de Harvey Dent, a cidade de Gotham City está pacificada e não precisa mais do Batman. A situação faz com que Bruce Wayne (Christian Bale) se torne um homem recluso em sua mansão, convivendo apenas com o mordomo Alfred (Michael Caine). Um dia, em meio a uma festa realizada na Mansão Wayne, uma das garçonetes contratadas rouba um colar de grande valor sentimental. Trata-se de Selina Kyle (Anne Hathaway), uma esperta e habilidosa ladra que, apesar de flagrada por Bruce, consegue fugir. Curioso em descobrir quem é ela, Bruce retorna à caverna para usar os computadores que tanto lhe serviram quando vestia o manto do Homem-Morcego. Aos poucos começa a perceber indícios do surgimento de uma nova ameaça a Gotham City, personificada no brutamontes Bane (Tom Hardy). É o suficiente para que volte a ser o Batman, apesar dos problemas físicos decorrentes de suas atividades como super-herói ao longo dos anos.</string>
    <string name="drawer_open">Menu aberto</string>
    <string name="drawer_closed">Menu fechado</string>
    <string name="alfred">Alfred: Em que posso ajudar?</string>
</resources>