<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">
    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.projetobatman.TitleFragment"
        android:label="@string/inicio">
        <action
            android:id="@+id/action_titleFragment_to_bruceFragment"
            app:destination="@id/bruceFragment" />
    </fragment>
    <fragment
        android:id="@+id/bruceFragment"
        android:name="com.example.projetobatman.BruceFragment"
        android:label="@string/bruce_wayne">
        <action
            android:id="@+id/action_bruceFragment_to_symbolFragment"
            app:destination="@id/symbolFragment" />
    </fragment>
    <fragment
        android:id="@+id/symbolFragment"
        android:name="com.example.projetobatman.SymbolFragment"
        android:label="@string/bat_symbol">
        <action
            android:id="@+id/action_symbolFragment_to_batmanFragment"
            app:destination="@id/batmanFragment" />
    </fragment>
    <fragment
        android:id="@+id/batmanFragment"
        android:name="com.example.projetobatman.BatmanFragment"
        android:label="@string/batman_title">
        <action
            android:id="@+id/action_batmanFragment_to_titleFragment"
            app:destination="@id/titleFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/sobreFragment"
        android:name="com.example.projetobatman.SobreFragment"
        android:label="@string/sobre" />
    <fragment
        android:id="@+id/viloesFragment"
        android:name="com.example.projetobatman.ViloesFragment"
        android:label="@string/viloes">
        <action
            android:id="@+id/action_viloesFragment_to_jokerFragment"
            app:destination="@id/jokerFragment"
            app:popUpTo="@id/viloesFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_viloesFragment_to_harveyFragment"
            app:destination="@id/harveyFragment" />
        <action
            android:id="@+id/action_viloesFragment_to_rasFragment"
            app:destination="@id/rasFragment" />
        <action
            android:id="@+id/action_viloesFragment_to_baneFragment"
            app:destination="@id/baneFragment" />
    </fragment>
    <fragment
        android:id="@+id/jokerFragment"
        android:name="com.example.projetobatman.JokerFragment"
        android:label="@string/joker" />
    <fragment
        android:id="@+id/baneFragment"
        android:name="com.example.projetobatman.BaneFragment"
        android:label="@string/bane" />
    <fragment
        android:id="@+id/harveyFragment"
        android:name="com.example.projetobatman.HarveyFragment"
        android:label="@string/two_face" />
    <fragment
        android:id="@+id/rasFragment"
        android:name="com.example.projetobatman.RasFragment"
        android:label="@string/ras_al_ghul" />
    <fragment
        android:id="@+id/filmesFragment"
        android:name="com.example.projetobatman.FilmesFragment"
        android:label="@string/filmes" >
        <action
            android:id="@+id/action_filmesFragment_to_beginsFragment"
            app:destination="@id/beginsFragment" />
        <action
            android:id="@+id/action_filmesFragment_to_knightFragment"
            app:destination="@id/knightFragment" />
        <action
            android:id="@+id/action_filmesFragment_to_risesFragment"
            app:destination="@id/risesFragment" />
    </fragment>
    <fragment
        android:id="@+id/beginsFragment"
        android:name="com.example.projetobatman.BeginsFragment"
        android:label="@string/begins" />
    <fragment
        android:id="@+id/knightFragment"
        android:name="com.example.projetobatman.KnightFragment"
        android:label="@string/knight" />
    <fragment
        android:id="@+id/risesFragment"
        android:name="com.example.projetobatman.RisesFragment"
        android:label="@string/rises" />
</navigation>