<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bat_logo"
            android:layout_width="@dimen/max_width"
            android:layout_height="@dimen/image_mainBanner_height"
            android:layout_marginTop="@dimen/margin_vertical_menu"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/movie_symbol" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical_menu"
            android:maxWidth="@dimen/max_width"
            android:text="@string/filmes_desc"
            android:textAlignment="center"
            android:textSize="@dimen/texto_corrido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bat_logo" />

        <ImageButton
            android:id="@+id/begins_button"
            android:layout_width="@dimen/img_button_width"
            android:layout_height="@dimen/img_button_height"
            android:layout_marginTop="@dimen/margin_vertical_menu"
            android:background="@color/yellow"
            android:contentDescription="@string/begins"
            android:scaleType="fitXY"
            android:src="@drawable/begins2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageButton
            android:id="@+id/rises_button"
            android:layout_width="@dimen/img_button_width"
            android:layout_height="@dimen/img_button_height"
            android:layout_marginTop="@dimen/margin_vertical_menu"
            android:layout_marginEnd="@dimen/margin_top_bot"
            android:layout_marginBottom="@dimen/margin_top_bot"
            android:background="@color/yellow"
            android:contentDescription="@string/rises"
            android:scaleType="fitXY"
            android:src="@drawable/rises2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/begins_button"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/knight_button"
            android:layout_width="@dimen/img_button_width"
            android:layout_height="@dimen/img_button_height"
            android:layout_marginStart="@dimen/margin_top_bot"
            android:layout_marginTop="@dimen/margin_vertical_menu"
            android:layout_marginBottom="@dimen/margin_top_bot"
            android:background="@color/yellow"
            android:contentDescription="@string/knight"
            android:scaleType="fitXY"
            android:src="@drawable/dark_knight_joker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/begins_button"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>